--- a/src/components/pokemon/Pokemon.css
+++ b/src/components/pokemon/Pokemon.css
@@ -1,10 +1,14 @@
+.pokemon-wrapper {
+  flex-basis: 30%;
+  text-decoration: none;
+  color: black;
+}
 .pokemon {
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 10px;
   align-items: center;
-  flex-basis: 30%;
   height: 300px;
   margin-top: 3rem;
   border: 1px solid black;
