--- a/src/components/PokemonDetails/PokemonDetails.css
+++ b/src/components/PokemonDetails/PokemonDetails.css
@@ -1,48 +1,61 @@
 .back {
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    font-size: x-large;
-    color: black;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  font-size: x-large;
+  color: black;
 }
 .back:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .pokemonDetails-wrapper {
-    height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    grid-template-columns: auto auto;
-    column-gap: 50px;
+  height: 50vh;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  grid-template-columns: auto auto;
+  column-gap: 50px;
 }
 .pokemonDetails-img img {
-    width: 350px;
-    height: 350px;
+  width: 350px;
+  height: 350px;
 }
 .pokemonDetails {
-    display: flex;
-    gap: 30px;
-    flex-direction: column;
-    justify-content: center;
-    /* align-items: center; */
-    font-size: xx-large;
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  font-size: xx-large;
 }
 .pokemonDetails-name span {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 .pokemonDetails-height span {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 .pokemonDetails-weight span {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 .pokemonDetails-type > span {
-    font-size: x-large;
-    font-weight: bold;
-    margin-right: 20px;
-    border: 1px solid grey;
-    border-radius: 10px;
-    padding: 8px 15px;
-    background-color: bisque;
+  font-size: x-large;
+  font-weight: bold;
+  margin-right: 20px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  padding: 8px 15px;
+  background-color: bisque;
+}
+.related-pokemons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+.related-pokemons-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-basis: 30%;
 }
